CCE-537 : reduced toolbar breakpoint to @screen-xs, fixed spacing to page level help, added top padding to table header, updated error message on localization editor.

--- a/src/less/techne-patterns/_tables.less
+++ b/src/less/techne-patterns/_tables.less
@@ -133,6 +133,7 @@
             text-transform: uppercase;
             color: @table-head-color;
             background: @table-head-bg;
+            padding-top: 50px;
             a{
                color: #fff;
             }
