--- a/src/less/techne-patterns/_toolbar.less
+++ b/src/less/techne-patterns/_toolbar.less
@@ -224,7 +224,7 @@
 
 @y-toolbar-height: 50px;
 @y-toobar-inactive-color: #909cab;
-@y-toolbar-breakpoint: @screen-sm;
+@y-toolbar-breakpoint: @screen-xs;
 
 .y-toolbar__cards{
 	margin-bottom: 15px;
